Added js import

--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <link href="style.css" rel="stylesheet" type="text/css"/>
 <script type="text/javascript" src="js/calculate.js"></script>
+<script type="text/javascript" src="js/convert.js"></script>
 <script type="text/javascript" src="js/create.js"></script>
-<script type="text/javascript" src="js/valid.js"></script>
-<script type="text/javascript" src="js/shl.js"></script>
 <script type="text/javascript" src="js/negate.js"></script>
+<script type="text/javascript" src="js/shl.js"></script>
+<script type="text/javascript" src="js/valid.js"></script>
 
 <body>
 	<h2>Restoring Division</h2>
