I think everything works now, idk how

--- a/index.html
+++ b/index.html
@@ -46,6 +46,9 @@
 	<!--Div for solution-->
 	<div class="sol_container">
 		<h2>Solution</h2>
-			<p id="solution"></p>
+		<p id="solution"></p>
+		<div id="steps">
+
+		</div>
 	</div>
 </body>
