Refresh boxes on calculate

--- a/index.html
+++ b/index.html
@@ -44,11 +44,11 @@
 	<hr>
 
 	<!--Div for solution-->
-	<div class="sol_container">
+	<div id="sol_container">
 		<h2>Solution</h2>
 		<p id="solution"></p>
 		<div id="steps">
-
+		
 		</div>
 	</div>
 </body>
