--- a/index.html
+++ b/index.html
@@ -30,19 +30,19 @@
 		<div class="ans_container" id="A_div">
 			<label>A: </label>
 			<div class="ans_holder">
-				<p id="ans_a">Placeholder</p>
+				<p id="ans_a">000000</p>
 			</div>
 		</div>
 		<div class="ans_container" id="Q_div">
 			<label>Q: </label>
 			<div class="ans_holder">
-				<p id="ans_q">Placeholder</p>
+				<p id="ans_q">000000</p>
 			</div>
 		</div>
 	</div>
 
 	<hr>
-
+	<p id="errormsg"></p>
 	<!--Div for solution-->
 	<div class="sol_container">
 		<h2>Solution</h2>
