Calculate button + code cleaning

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 		<br><br>
 		<input type="checkbox" id="check_int">Input is base-10.</input>
 		<input type="checkbox" id="show_sol">Show Solution</input>
+		<input type="checkbox" id="cb_output">Output to file "output.txt"</input>
 		<br><br>
 		<button id="btn-calculate" onclick="calculate()">Calculate</button>
 	</div>
